Update work order

--- a/templates/work_orders/third_work_order.html
+++ b/templates/work_orders/third_work_order.html
@@ -49,19 +49,19 @@
 <ol>
 
 <li class="orders"> <!-- 1 -->
-Django/Jinja: Correct article.html template to show only one essay article (one essay per slug, rather than all essays stacked ontop of each other on a single template). Each essay should have it’s own page. I realize the problem is my Jinja for loop inside the template, but I am not sure how to fix this.</li>
+<span class="completed">Django/Jinja: Correct article.html template to show only one essay article (one essay per slug, rather than all essays stacked ontop of each other on a single template). Each essay should have it’s own page. I realize the problem is my Jinja for loop inside the template, but I am not sure how to fix this.</SPAN><strong>COMPLETED 17 FEBRUARY</strong></li>
 
 <li class="orders"><!-- 2 -->
-Javascript: More animations for at_random.html template:
+<span class="completed">Javascript: More animations for at_random.html template:
     <ul>
         <li>Say there are three narrative img icons toggled. When one of them (say Galileo) is then untoggled, the remaining narrative content should animate by ‘gently ascending’</li>
         <li>Say there is only one narrative img icon remaining (say FLOSS) toggled. When FLOSS is then untoggled, the bottom footer should animate by ‘gently ascending’</li>
         <li>Likewise, when a narrative img is toggled, then there needs to be an animation which gently creates a space for the narrative content to appear. For example, if all three narrative img’s are in an untoggled state, when FLOSS is toggled, the footer should ‘gently descend’ to create a space to allow for the new content to move into.</li>
-    </ul>
+    </ul></span>    <strong>COMPLETED 18 FEBRUARY</strong>
 </li>
 
 <li class="orders"><!-- 3 -->
-Javascript: Default toggled narrative content must show Galileo only (with FLOSS and St Paul untoggled by default). However if the web user selects FLOSS, St Paul and untoggles Galileo, then the website needs to remember the user’s selection when Django serves the next tarot card (at_random template)
+<span class="completed">Javascript: Default toggled narrative content must show Galileo only (with FLOSS and St Paul untoggled by default). However if the web user selects FLOSS, St Paul and untoggles Galileo, then the website needs to remember the user’s selection when Django serves the next tarot card (at_random template)</span>  <strong>COMPLETED 18 FEBRUARY</strong>
 </li>
 
 <li class="orders"><!-- 4 -->
@@ -80,7 +80,7 @@ Bootstrap: Arrange to have footer partial to stick to bottom of web page (rather
 </li>
 
 <li class="orders"><!-- 6 -->
-CSS: At mobile size resolutions, when you click the hamburger button, there is a blue square around the border. See <a href="https://i.imgur.com/dnQbia3.jpg">here</a>. Can you make this square border crimson (instead of the default blue)?
+<span class="completed">CSS: At mobile size resolutions, when you click the hamburger button, there is a blue square around the border. See <a href="https://i.imgur.com/dnQbia3">here</a>. Can you make this square border crimson (instead of the default blue)?</span> <strong>COMPLETED 19 FEBRUARY</strong>
 </li>
 
 <li class="orders"> <!-- 7 -->
