Correct demo / image links to imgur in 3 places

--- a/templates/work_orders/third_work_order.html
+++ b/templates/work_orders/third_work_order.html
@@ -84,7 +84,7 @@ Bootstrap: Arrange to have footer partial to stick to bottom of web page (rather
 </li>
 
 <li class="orders"> <!-- 7 -->
-Bootstrap:This is <a href="https://i.imgur.com/wxp3lbL.jpg">Here is is a demo</a> of the end product that I am trying to achieve. Where as <a href="https://i.imgur.com/MT3AREl.jpg">here is a screenshot of what it looks like now</a>.  Here are some key differences. At medium size resolutions:
+Bootstrap:This is <a href="https://i.imgur.com/wxp3lbL">Here is is a demo</a> of the end product that I am trying to achieve. Where as <a href="https://i.imgur.com/MT3AREl">here is a screenshot of what it looks like now</a>.  Here are some key differences. At medium size resolutions:
     <ol>
         <li>Make navbar spacing between menu options equal</li>
         <li>Move HOME and ABOUT down slightly</li>
