Clarified Req#4 question / answer

--- a/templates/work_orders/third_work_order.html
+++ b/templates/work_orders/third_work_order.html
@@ -65,7 +65,7 @@
 </li>
 
 <li class="orders"><!-- 4 -->
-Javascript: At the bottom of at_random.html, what does this do? What is its purpose?
+<span class="completed">Javascript: At the bottom of at_random.html, what does this do? What is its purpose?</span>
     <br>
     <blockquote>< script>
     if(window.location.pathname.split('/')[2] === ""){
@@ -73,6 +73,9 @@ Javascript: At the bottom of at_random.html, what does this do? What is its purp
     }
     < /script>
     </blockquote>
+     <strong> COMPLETED 19 FEBRUARY</strong> <Br>
+    Syed answers my question with this : 
+    <blockquote>The above code is using to update URL with the generator number, when redirecting from homepage. If the javascript code get removes then the urls would be /at_random, with no number. My suggestion is, let remove this code, On Redirecting to at_random template from home page the url will be /at_random, And selecting the thumbnail redirects to at_random template, and then the url will be /at_random/9/. For Req#4 we have revamped at_random template redirection with the new middle view and removed that javascript code, code is pushed into PR. Now Our code is more clean and structurized.</blockquote> <strong>COMPLETED 19 FEBRUARY</strong>
 </li>
 
 <li class="orders"><!-- 5 -->
@@ -84,7 +87,7 @@ Bootstrap: Arrange to have footer partial to stick to bottom of web page (rather
 </li>
 
 <li class="orders"> <!-- 7 -->
-Bootstrap:This is <a href="https://i.imgur.com/wxp3lbL">Here is is a demo</a> of the end product that I am trying to achieve. Where as <a href="https://i.imgur.com/MT3AREl">here is a screenshot of what it looks like now</a>.  Here are some key differences. At medium size resolutions:
+Bootstrap: <a href="https://i.imgur.com/wxp3lbL">Here is is a demo</a> of the end product that I am trying to achieve. Where as <a href="https://i.imgur.com/MT3AREl">here is a screenshot of what it looks like now</a>.  Here are some key differences. At medium size resolutions:
     <ol>
         <li>Make navbar spacing between menu options equal</li>
         <li>Move HOME and ABOUT down slightly</li>
