--- a/templates/work_orders/third_work_order.html
+++ b/templates/work_orders/third_work_order.html
@@ -49,23 +49,23 @@
 <ol>
 
 <li class="orders"> <!-- 1 -->
-Django/Jinja: Correct article.html template to show only one essay article (one essay per slug, rather than all essays stacked ontop of each other on a single template). Each essay should have it’s own page. I realize the problem is my Jinja for loop inside the template, but I am not sure how to fix this.</li>
+<span class="completed">Django/Jinja: Correct article.html template to show only one essay article (one essay per slug, rather than all essays stacked ontop of each other on a single template). Each essay should have it’s own page. I realize the problem is my Jinja for loop inside the template, but I am not sure how to fix this.</SPAN><strong>COMPLETED 17 FEBRUARY</strong></li>
 
 <li class="orders"><!-- 2 -->
-Javascript: More animations for at_random.html template:
+<span class="completed">Javascript: More animations for at_random.html template:
     <ul>
         <li>Say there are three narrative img icons toggled. When one of them (say Galileo) is then untoggled, the remaining narrative content should animate by ‘gently ascending’</li>
         <li>Say there is only one narrative img icon remaining (say FLOSS) toggled. When FLOSS is then untoggled, the bottom footer should animate by ‘gently ascending’</li>
         <li>Likewise, when a narrative img is toggled, then there needs to be an animation which gently creates a space for the narrative content to appear. For example, if all three narrative img’s are in an untoggled state, when FLOSS is toggled, the footer should ‘gently descend’ to create a space to allow for the new content to move into.</li>
-    </ul>
+    </ul></span>    <strong>COMPLETED 18 FEBRUARY</strong>
 </li>
 
 <li class="orders"><!-- 3 -->
-Javascript: Default toggled narrative content must show Galileo only (with FLOSS and St Paul untoggled by default). However if the web user selects FLOSS, St Paul and untoggles Galileo, then the website needs to remember the user’s selection when Django serves the next tarot card (at_random template)
+<span class="completed">Javascript: Default toggled narrative content must show Galileo only (with FLOSS and St Paul untoggled by default). However if the web user selects FLOSS, St Paul and untoggles Galileo, then the website needs to remember the user’s selection when Django serves the next tarot card (at_random template)</span>  <strong>COMPLETED 18 FEBRUARY</strong>
 </li>
 
 <li class="orders"><!-- 4 -->
-Javascript: At the bottom of at_random.html, what does this do? What is its purpose?
+<span class="completed">Javascript: At the bottom of at_random.html, what does this do? What is its purpose?</span>
     <br>
     <blockquote>< script>
     if(window.location.pathname.split('/')[2] === ""){
@@ -73,6 +73,9 @@ Javascript: At the bottom of at_random.html, what does this do? What is its purp
     }
     < /script>
     </blockquote>
+     <strong> COMPLETED 19 FEBRUARY</strong> <Br>
+    Syed answers my question with this : 
+    <blockquote>The above code is using to update URL with the generator number, when redirecting from homepage. If the javascript code get removes then the urls would be /at_random, with no number. My suggestion is, let remove this code, On Redirecting to at_random template from home page the url will be /at_random, And selecting the thumbnail redirects to at_random template, and then the url will be /at_random/9/. For Req#4 we have revamped at_random template redirection with the new middle view and removed that javascript code, code is pushed into PR. Now Our code is more clean and structurized.</blockquote> <strong>COMPLETED 19 FEBRUARY</strong>
 </li>
 
 <li class="orders"><!-- 5 -->
@@ -80,11 +83,11 @@ Bootstrap: Arrange to have footer partial to stick to bottom of web page (rather
 </li>
 
 <li class="orders"><!-- 6 -->
-CSS: At mobile size resolutions, when you click the hamburger button, there is a blue square around the border. See <a href="https://i.imgur.com/dnQbia3.jpg">here</a>. Can you make this square border crimson (instead of the default blue)?
+<span class="completed">CSS: At mobile size resolutions, when you click the hamburger button, there is a blue square around the border. See <a href="https://i.imgur.com/dnQbia3">here</a>. Can you make this square border crimson (instead of the default blue)?</span> <strong>COMPLETED 19 FEBRUARY</strong>
 </li>
 
 <li class="orders"> <!-- 7 -->
-Bootstrap:This is <a href="https://i.imgur.com/wxp3lbL.jpg">Here is is a demo</a> of the end product that I am trying to achieve. Where as <a href="https://i.imgur.com/MT3AREl.jpg">here is a screenshot of what it looks like now</a>.  Here are some key differences. At medium size resolutions:
+Bootstrap: <a href="https://i.imgur.com/wxp3lbL">Here is is a demo</a> of the end product that I am trying to achieve. Where as <a href="https://i.imgur.com/MT3AREl">here is a screenshot of what it looks like now</a>.  Here are some key differences. At medium size resolutions:
     <ol>
         <li>Make navbar spacing between menu options equal</li>
         <li>Move HOME and ABOUT down slightly</li>
