Add 'still outstanding' higlighting

--- a/templates/work_orders/third_work_order.html
+++ b/templates/work_orders/third_work_order.html
@@ -78,7 +78,7 @@
     <blockquote>The above code is using to update URL with the generator number, when redirecting from homepage. If the javascript code get removes then the urls would be /at_random, with no number. My suggestion is, let remove this code, On Redirecting to at_random template from home page the url will be /at_random, And selecting the thumbnail redirects to at_random template, and then the url will be /at_random/9/. For Req#4 we have revamped at_random template redirection with the new middle view and removed that javascript code, code is pushed into PR. Now Our code is more clean and structurized.</blockquote> <strong>COMPLETED 19 FEBRUARY</strong>
 </li>
 
-<li class="orders"><!-- 5 -->
+<li class="orders"><!-- 5 --><span class=highlightme>still outstanding</span>:
 Bootstrap: Arrange to have footer partial to stick to bottom of web page (rather than floating in mid air) on pages where text content doesn’t fill the whole screen, such as on the “About” webpage.
 </li>
 
