--- a/templates/generators/at_random.html
+++ b/templates/generators/at_random.html
@@ -18,7 +18,7 @@
 
 {% block content %}
 <!-- Begin Carousel code -->
-  <div class="carousel animated" style="visibility: hidden">
+  <div class="carousel hideCarousel">
     <div class="slider">
         {% for card in cards %}
         <div class="slide">
