soft reset to Resolve 2 button merge conflict
before merge master

--- a/templates/generators/at_random.html
+++ b/templates/generators/at_random.html
@@ -36,7 +36,7 @@
 
   <div id="centered-buttons">
     <a href="{% url 'at_random_with_number' generator_number=next_card_number %}" class="btn third">Pull Card At Random</a>
-    <a href="#" class="btn third" id="choose-card">Show / Hide Album</a>
+    <a href="#" class="btn third" id="choose-card">Choose card from album</a>
   </div>
 
   {% if generator %}
