--- a/templates/generators/at_random.html
+++ b/templates/generators/at_random.html
@@ -35,18 +35,16 @@
 <!-- End Carousel code-->
 
   <div id="centered-buttons">
-<<<<<<< HEAD
-    <a href="{% url 'at_random_with_number' generator_number=next_card_number %}" class="btn third">Pull Card At Random</a>
-    <a href="#" class="btn third">Choose card from album</a>
-=======
+
+    <a href="{% url 'at_random_with_number' generator_number=next_card_number %}" class="btn third">Pull Card At Random (Syed)</a>
 
       {% if next_card_number %}
-        <a href="{{next_card_number}}" class="btn third">Pull Card At Random</a>
+        <a href="{{next_card_number}}" class="btn third">Pull Card At Random (Slip)</a>
       {% endif %}
     
       <a href="#" class="btn third" id="choose-card">Choose card from album</a>
     
->>>>>>> 752cfd01e9281755cf85ed545f670d2a729dddcf
+
   </div>
 
   {% if generator %}
