--- a/tarot_juicer/static/css/style.css
+++ b/tarot_juicer/static/css/style.css
@@ -260,14 +260,16 @@ a:active {
   background: white;
 }
 
+/*
 .main-container {
   min-height: 100%;
   margin-bottom: 50px;
-}
+}*/
 
 .navbar-dark .navbar-toggler {
   border-color: #990000;
   margin-bottom: 17px;
+  margin-top: 17px;
 }
 
 button:focus {
