--- a/templates/essays/all_content_dump.html
+++ b/templates/essays/all_content_dump.html
@@ -10,9 +10,9 @@
 
 {% comment %} {% extends 'base.html' %} {% endcomment %}
 
-{% load static %}
+{% comment %} {% load static %}{% endcomment %}
      
-     <link rel="stylesheet" href="{% static 'css/essay-main.css' %}">
+    <!-- {% comment %} <link rel="stylesheet" href="{% static 'css/essay-main.css' %}">{% endcomment %} -->
      
      <style>
           h1 {
