Adjust CSS, remove 'coming soon' with 'pending'

--- a/templates/landings/portal.html
+++ b/templates/landings/portal.html
@@ -156,7 +156,7 @@ h2 {color: white;}
   opacity: 0;
   transition: opacity 1s;
   border: 1px solid white;
-  font-size: 13px;
+  font-size: 14px;
   font-weight: 400;
 }
 
@@ -188,7 +188,7 @@ h2 {color: white;}
     /* Put your CSS here for 200px to 767px width devices (cover all mobile portrait width */
 
       img {
-        width: 50%;
+        width: 63%;
       }
 
       #smartphone-pent{
@@ -237,7 +237,7 @@ h2 {color: white;}
     <h3>
       <div class="tooltip">
         <a href="#">@ HOLLYWOOD</a> 
-        <span class="tooltiptext">Coming soon!</span>
+        <span class="tooltiptext">Pending</span>
       </div>
     </h3> 
 
@@ -253,7 +253,7 @@ h2 {color: white;}
     </h3> 
 
     <!-- Q: -->
-    <h3><a href="https://twitter.com/hashtag/qanon">#QAnon</a></h3> 
+    <h3><a href="http://qmap.pub/">QMap</a> <a href="https://twitter.com/hashtag/qanon">#QAnon</a></h3> 
     
       <br />
       <center><img id="smartphone-pent" src="{% static 'img/crimson-pentavcle-wtih-grey.gif' %}" /></center>
