--- a/templates/landings/portal.html
+++ b/templates/landings/portal.html
@@ -263,7 +263,7 @@ h2 {color: white;}
     <h3><a href="{% url 'about' %}">(About)</a></h3> 
     
     <!-- To generic tarot card introduction landing page:  -->
-    <h3><a href="{% url 'get_random_generator' %}">(Tarot at random)</a></h3> 
+    <h3><a href="{% url 'get_tarot_key_generator' %}">(Tarot at random)</a></h3> 
   
 </div>
   <div class="more-pens">
