--- a/templates/generators/tarot_key.html
+++ b/templates/generators/tarot_key.html
@@ -36,7 +36,7 @@
 
   <div id="centered-buttons">
 
-    <a href="{% url 'at_random_with_number' generator_number=next_card_number %}" class="btn third">Pull Card At Random (Syed)</a>
+    <a href="{% url 'tarot_key_with_number' generator_number=next_card_number %}" class="btn third">Pull Card At Random (Syed)</a>
 
       {% if next_card_number %}
         <a href="{{next_card_number}}" class="btn third">Pull Card At Random (Slip)</a>
