Change 'tarot at random' to 'tarot keys' in navbar

--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -36,7 +36,7 @@
               class="nav-item mr-md-3 mx-sm-auto align-self-center"
             {% endif %}
           >
-            <a class="nav-link" href="{% url 'get_tarot_key_generator' %}">Tarot at Random</a>
+            <a class="nav-link" href="{% url 'get_tarot_key_generator' %}">Tarot Keys</a>
           </li>
 
           <li
