--- a/templates/landings/portal.html
+++ b/templates/landings/portal.html
@@ -174,13 +174,18 @@ h2 {color: white;}
   visibility: visible;
    opacity: 1;
 }
-
+hr {
+  width: 100px;
+}
 @media only screen and (min-width: 768px) and (max-width: 3840px)  {
     /* Put your CSS here for 768px to 1024px width devices(covers all iPad portrait width */
     
     img {
         width: 15%;
     }
+ #pent{
+        width: 5%;
+      }
 
   }
 
@@ -188,11 +193,11 @@ h2 {color: white;}
     /* Put your CSS here for 200px to 767px width devices (cover all mobile portrait width */
 
       img {
-        width: 63%;
+        width: 33%;
       }
 
-      #smartphone-pent{
-        width: 25%;
+      #pent{
+        width: 11%;
       }
 
     }
@@ -251,12 +256,12 @@ h2 {color: white;}
         <span class="tooltiptext">Pending</span>
       </div>
     </h3> 
-
+  <hr>
     <!-- Q: -->
     <h3><a href="http://qmap.pub/">QMap</a> <a href="https://twitter.com/hashtag/qanon">#QAnon</a></h3> 
     
       <br />
-      <center><img id="smartphone-pent" src="{% static 'img/crimson-pentavcle-wtih-grey.gif' %}" /></center>
+      <center><img id="pent" src="{% static 'img/crimson-pentavcle-wtih-grey.gif' %}" /></center>
       <br />
 
     <!-- To landing page explaining "why" and "what" of this website:  -->
