--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -46,7 +46,7 @@
               class="nav-item mr-md-3 mx-sm-auto align-self-center"
             {% endif %}
             >
-            <a class="nav-link" href="{% url 'site_map' %}">Annotated Essay List</a>
+            <a class="nav-link" href="{% url 'site_map' %}">Annotated <br> Essay List</a>
           </li>
           <br>
           <li class="nav-item custom-nav-button d-lg-none d-md-none d-sm-block">
