--- a/templates/generators/tarot_key.html
+++ b/templates/generators/tarot_key.html
@@ -36,7 +36,7 @@
 
   <div id="centered-buttons">
 
-    <a href="{% url 'tarot_key_with_number' generator_number=next_card_number %}" class="btn third">Pull Card At Random</a>
+    <a href="{% url 'tarot_key_with_number' generator_number=next_card_number %}" class="btn third">Card At Random</a>
 
     <!-- Slip's alternative button
       {% comment %} 
