Change 'site_map' to 'essay_list' through out

--- a/tarot_juicer/static/css/style.css
+++ b/tarot_juicer/static/css/style.css
@@ -200,6 +200,11 @@ a:link {
   color: white;
 }
 
+/* 
+a:link > .hyperlinks {
+  color: yellow;
+}*/
+
 /* visited link */
 a:visited {
   color: white;
