--- a/templates/landings/essay_list.html
+++ b/templates/landings/essay_list.html
@@ -17,7 +17,7 @@
 </ul>
 <ul>
     <li>Ut vel justo sed arcu tincidunt vulputate. </li>
-    <li>Duis fermentum, <a href="#">mi ac gravida dictum</a>, lacus ex malesuada eros, eget tempor eros lorem eget magna. </li>
+    <li>Duis fermentum, <a class="hyperlinks" href="#wer">mi ac gravida dictum</a>, lacus ex malesuada eros, eget tempor eros lorem eget magna. </li>
 </ul>
 <p>Aliquam sit amet lacus vel nulla pharetra hendrerit a ut velit. Nulla facilisi. Donec scelerisque sed nulla quis pharetra.</p>
 </div><!-- end essay -->
