--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -40,13 +40,13 @@
           </li>
 
           <li
-          {% if 'site_map' in request.path %}
+          {% if 'essay_list' in request.path %}
               class="nav-item active mr-md-3 mx-sm-auto align-self-center"
             {% else %}
               class="nav-item mr-md-3 mx-sm-auto align-self-center"
             {% endif %}
             >
-            <a class="nav-link" href="{% url 'site_map' %}">Annotated <br> Essay List</a>
+            <a class="nav-link" href="{% url 'essay_list' %}">Annotated <br> Essay List</a>
           </li>
     
           <li class="nav-item custom-nav-button d-lg-none d-md-none d-sm-block">
