*** Temporarily remove all controversial content

--- a/templates/landings/portal.html
+++ b/templates/landings/portal.html
@@ -231,9 +231,9 @@ hr {
     
     <!-- Original concept borrowed from Marco Dell'Anna in a CodePen titled ALIEN - Deviation of microcosm, source: https://codepen.io/plasm/pen/JNPXxg  -->
     
-    <h1>GLOBAL INITIATION</h1>
+    <h1>Tarot</h1>
     
-    <center><img src="{% static 'img/compass1-black-with-blur4.png' %}"></center>
+    <center></center>
 
     <!-- To F/LOSS/GG index.html export:  -->
     <h3><a href="{% url 'slashdot' %}">@ SLASHDOT</a></h3> 
@@ -257,9 +257,7 @@ hr {
       </div>
     </h3> 
   <hr>
-    <!-- Q: -->
-    <h3><a href="http://qmap.pub/">QMap</a> <a href="https://twitter.com/hashtag/qanon">#QAnon</a></h3> 
-    
+        
       <br />
       <center><img id="pent" src="{% static 'img/crimson-pentavcle-wtih-grey.gif' %}" /></center>
       <br />
