Finalize removal of controversial content

--- a/templates/landings/portal.html
+++ b/templates/landings/portal.html
@@ -249,7 +249,7 @@ hr {
     <!-- To St Paul index.html export:  -->
     <h3><a href="{% url 'watchtower' %}">@ THE WATCHTOWER</a></h3> 
     
-    <!-- + Alex Jones article:  -->
+    <!-- Special article:  -->
     <h3>
       <div class="tooltip">
         <a href="#">@ AMERIKA</a>
