--- a/templates/generators/tarot_key.html
+++ b/templates/generators/tarot_key.html
@@ -9,6 +9,28 @@
   <style> /*img#no-shadow,#squad_grey {
      box-shadow:none;
      }*/
+     
+     /* unvisited link 
+a:link > .third {
+  color: green;
+}
+
+/* visited link 
+ a:visited > .third {
+  color: green;
+}
+
+/* mouse over link 
+ a:hover > .third {
+  color: green;
+  font-weight: bold;
+}
+
+/* selected link 
+ a:active > .third {
+  color: green;
+}*/
+
   </style>
   <!-- Begin carousel includes -->
   <link rel="stylesheet" href="{% static 'css/carousel.css' %}">
