set default plain unanimated hide

--- a/templates/generators/tarot_key.html
+++ b/templates/generators/tarot_key.html
@@ -40,7 +40,7 @@ a:link > .third {
 
 {% block content %}
 <!-- Begin Carousel code -->
-  <div class="carousel hideCarousel">
+  <div class="carousel hide">
     <div class="slider">
         <div class="slide"><img src="{% static 'img/cardback.jpg' %}" alt="card back image"></div>
         <div class="slide"><img src="{% static 'img/cardback.jpg' %}" alt="card back image"></div>
