--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -31,6 +31,14 @@ img {
   margin-right: 0.4rem;
 }
 
+.social a:link {
+    color: #fff;
+}
+
+.social a:hover {
+    text-decoration:none;
+}
+
 #showcase {
   background: url(../img/showcase.jpg) no-repeat top center fixed/cover;
   position: relative;
