Moved .social a:link to proper static directory

--- a/tarot_juicer/static/css/style.css
+++ b/tarot_juicer/static/css/style.css
@@ -27,8 +27,16 @@ img {
   text-transform: uppercase;
 }
 
-.social a {
+/* .social a {
   margin-right: 0.4rem;
+}*/
+
+.social a:link {
+  color: #fff;
+}
+
+.social a:hover {
+  text-decoration: none;
 }
 
 #showcase {
