Re-arrange options

--- a/templates/landings/portal.html
+++ b/templates/landings/portal.html
@@ -300,31 +300,27 @@ figcaption {
         <span class="tooltiptext">Pending</span>
       </div>
     </h3> 
-  <hr>
-        
-      <br />
-      <center><img id="pent" src="{% static 'img/crimson-pentavcle-wtih-grey.gif' %}" /></center>
-      <br />
-    
+    <h3> / / / </h3> 
     <h3><a href="{% url 'essay_list' %}">Essay list</a></h3>
-
+    <hr>    
+    
+    <br />
+    <center><img id="pent" src="{% static 'img/crimson-pentavcle-wtih-grey.gif' %}" /></center>
+    <br />
+    
     <!-- To landing page explaining "why" and "what" of this website:  -->
     <h3><a href="{% url 'about' %}">(About)</a></h3> 
     
     <!-- To generic tarot card introduction landing page:  -->
     <h3><a href="{% url 'get_tarot_key_generator' %}">(Tarot at random)</a></h3> 
    
-    
-
-    <figure>
-
+    <!-- <figure>
     <div class="videoWrapper">
       <iframe src="https://www.youtube.com/embed/qDU-y4GeAOI" frameborder="0" allowfullscreen></iframe>
-    </div>
+    </div> 
+     <figcaption>Video Description would go here.</figcaption> 
+    </figure> -->
 
-    <!-- <figcaption>Video Description would go here.</figcaption> -->
-
-</figure>
 </div>
   <div class="more-pens">
   
