--- a/templates/generators/tarot_key.html
+++ b/templates/generators/tarot_key.html
@@ -40,7 +40,7 @@ a:link > .third {
 
 {% block content %}
 <!-- Begin Carousel code -->
-  <div class="carousel hide">
+  <div class="carousel hide" >
     <div class="slider">
         <div class="slide"><img src="{% static 'img/cardback.jpg' %}" alt="card back image"></div>
         <div class="slide"><img src="{% static 'img/cardback.jpg' %}" alt="card back image"></div>
@@ -56,9 +56,9 @@ a:link > .third {
 
 <!-- End Carousel code-->
 
-  <div id="centered-buttons">
+  <div id="centered-buttons" class="social">
 
-    <a href="{% url 'tarot_key_with_number' generator_number=next_card_number %}" class="btn third">Card At Random</a>
+    <a class="btn third social" href="{% url 'tarot_key_with_number' generator_number=next_card_number %}" >Card At Random</a>
 
     <!-- Slip's alternative button
       {% comment %} 
@@ -68,7 +68,7 @@ a:link > .third {
       {% endif %} {% endcomment %}
     -->
 
-      <a href="#" class="btn third" id="choose-card">Show / Hide Album</a>
+      <a href="#" class="btn third social" id="choose-card">Show / Hide Album</a>
     
 
   </div>
