Minor cosmetic CSS adjustments

--- a/tarot_juicer/static/css/style.css
+++ b/tarot_juicer/static/css/style.css
@@ -96,6 +96,12 @@ img {
   position: relative;
 }
 
+@media (max-width: 1280px) {
+  #top-bar {
+    text-align: center;
+  }
+}
+
 @media (max-width: 991px) {
   #showcase {
     padding-top: 4rem;
@@ -105,6 +111,9 @@ img {
   }
   .hide-md-down {
     display: none;
+  }
+  #top-bar {
+    text-align: center;
   }
 }
 
