--- a/templates/generators/tarot_key.html
+++ b/templates/generators/tarot_key.html
@@ -6,31 +6,7 @@
   <link rel="stylesheet" href="{% static 'css/tarot_key.normalize.css' %}">
   <link rel="stylesheet" href="{% static 'css/tarot_key.css' %}">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
-  <style> /*img#no-shadow,#squad_grey {
-     box-shadow:none;
-     }*/
-     
-     /* unvisited link 
-a:link > .third {
-  color: green;
-}
-
-/* visited link 
- a:visited > .third {
-  color: green;
-}
-
-/* mouse over link 
- a:hover > .third {
-  color: green;
-  font-weight: bold;
-}
-
-/* selected link 
- a:active > .third {
-  color: green;
-}*/
-
+  <style> 
   </style>
   <!-- Begin carousel includes -->
   <link rel="stylesheet" href="{% static 'css/carousel.css' %}">
