--- a/tarot_juicer/static/css/essay-main.css
+++ b/tarot_juicer/static/css/essay-main.css
@@ -933,7 +933,7 @@ section.general img.pelican-specific {
   background-attachment: fixed;
   border: none;
   text-shadow: 0px 2px 3px black;
-  font-size: 1.1em;
+  font-size: 125%;
 }
 
 @media (min-width: 1366px) {
