--- a/templates/landings/essay_list.html
+++ b/templates/landings/essay_list.html
@@ -9,17 +9,12 @@
 
 <article class="article">
 <div class="essay">   
-<p>Cras auctor dui a lectus accumsan convallis. Phasellus tempus ipsum mattis, posuere sem id, porttitor ipsum. In porta sem purus, in interdum enim venenatis sit amet. <a class="" href="#">Vestibulum suscipit in leo non</a> mattis. <a class="" href="#">Sed eget dui pellentesque</a>, porta erat at, tempus tortor. Donec augue sem, placerat id urna nec, porta aliquet sem. <a class="" href="#">Nam accumsan ipsum</a> quis enim varius pretium. </p>
-<ul>
-    <li>Suspendisse iaculis porttitor purus in ultrices. </li>
-    <li>Sed id nunc auctor, viverra tortor sed, auctor leo. </li>
-    <li>Vestibulum egestas tempor justo ac iaculis. </li>
-</ul>
-<ul>
-    <li>Ut vel justo sed arcu tincidunt vulputate. </li>
-    <li>Duis fermentum, <a class="" href="#">mi ac gravida dictum</a>, lacus ex malesuada eros, eget tempor eros lorem eget magna. </li>
-</ul>
-<p>Aliquam sit amet lacus vel nulla pharetra hendrerit a ut velit. Nulla facilisi. Donec scelerisque sed nulla quis pharetra.</p>
+{% if essay_lists %}
+   {% for essay_list in essay_lists %}    
+      <p class="text-justify"> {{ essay_list.text_content|safe }} </p>
+   {% endfor %}
+{% endif %}
+
 </div><!-- end essay -->
 </article>
 
